--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,25 @@
+databases:
+  - name: live-polling-db
+    databaseName: livepolling
+    user: admin
+    plan: free # Render offers a free tier for Postgres
+
 services:
   # Backend Service
   - type: web
     name: live-polling-server
     env: node
-    region: singapore # Optional, choose closest
+    region: singapore # Optional
     plan: free
     buildCommand: cd server && npm install && npx prisma generate && npm run build
     startCommand: cd server && npm run start
     envVars:
       - key: PORT
         value: 10000
-        value: 10000
       - key: DATABASE_URL
         fromDatabase:
           name: live-polling-db
           property: connectionString
-
-  # Database Service
-  - type: psql
-    name: live-polling-db
-    env: postgres
-    plan: free # or starter
-    databaseName: livepolling
-    user: admin
 
   # Frontend Service
   - type: static
