--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
     name: live-polling-client
     env: static
     buildCommand: cd client && npm install && npm run build
-    publishDir: client/dist
+    staticPublishPath: client/dist
     routes:
       - type: rewrite
         source: /*
