--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,4 @@
-databases:
-  - name: live-polling-db
-    databaseName: livepolling
-    user: admin
-    plan: free
+
 
 services:
   # Backend Service
@@ -17,9 +13,7 @@ services:
       - key: PORT
         value: 10000
       - key: DATABASE_URL
-        fromDatabase:
-          name: live-polling-db
-          property: connectionString
+        sync: false
 
   # Frontend Service
   - type: web
