--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "build": "tsc",
-    "start": "npx prisma db push --accept-data-loss && node dist/index.js"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
