--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     env: node
     region: singapore
     plan: free
-    buildCommand: cd server && npm install && npx prisma generate && npx prisma db push --accept-data-loss && npm run build
+    buildCommand: cd server && npm install && npx prisma generate && npm run build
     startCommand: cd server && npm run start
     envVars:
       - key: PORT
