--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,4 @@ services:
         destination: /index.html
     envVars:
       - key: VITE_API_URL
-        fromService:
-          type: web
-          name: live-polling-server
-          property: host
+        value: https://live-polling-server-kbb3.onrender.com
